// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentBarCheckoutButton /> should render disabled button 1`] = `
<Connect(Link)
  aria-disabled={true}
  disabled={true}
  href="/checkout"
  role="button"
  tabIndex={0}
>
  <RippleButton
    className="css-ce5yef"
    disabled={true}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Translate
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={Object {}}
      role={null}
      string="cart.checkout"
      transform={null}
    />
  </RippleButton>
</Connect(Link)>
`;

exports[`<PaymentBarCheckoutButton /> should render enabled button 1`] = `
<Connect(Link)
  aria-disabled={false}
  disabled={false}
  href="/checkout"
  role="button"
  tabIndex={0}
>
  <RippleButton
    className="css-1g94fbj"
    disabled={false}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Translate
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={Object {}}
      role={null}
      string="cart.checkout"
      transform={null}
    />
  </RippleButton>
</Connect(Link)>
`;
